[package]
name = "dataquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
async-trait = "0.1.57"
clap = { version = "3.2.21", features = ["derive"] }
gluesql = { version = "0.12.0", default-features = false, features = ["metadata", "index"] }
rustyline = "10.0.0"
rustyline-derive = "0.7.0"
serde = { version = "1.0.144", features = ["derive"] }
tabled = "0.8.0"
thiserror = "1.0.35"
